clean up and update to java 21